Fix z-index of <Dropdown>

--- a/components/dropdown/index.styl
+++ b/components/dropdown/index.styl
@@ -16,6 +16,7 @@
 
   &
     position absolute
+    z-index $z-DropdownMenu
     margin .25em 0
     width -moz-fit-content
     width -webkit-fit-content
